--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
   },
   "dependencies": {
     "express": "^4.13.4",
-    "socket.io": "^1.4.5"
+    "icecast": "^1.3.1",
+    "lame": "^1.2.3",
+    "socket.io": "^1.4.5",
+    "uuid": "^2.0.1"
   },
   "bugs": {
     "url": "https://github.com/silent-desko/server/issues"
